Add xstyle link

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 		<p>2.复制出stylish.sqlite</p>
 		<p>3.在下面选择文件的地方，选择stylish.sqlite</p>
 		<p>4.稍等片刻，浏览器会弹出下载窗口，将其另存为</p>
-		<p>5.打开xStyle管理界面，选择“从备份文件导入”，选择刚才下载到的文件</p>
+		<p>5.打开<a href="https://github.com/FirefoxBar/xStyle">xStyle</a>管理界面，选择“从备份文件导入”，选择刚才下载到的文件</p>
 		<p>注意：此操作将会覆盖xStyle中已有的样式<p>
 		<p>1.Find the Firefox profiles folder (if you do not know where it is, you can open about: support, click the "open folder" on right of "configuration folder")</p>
 		<p>2.Copy out stylish.sqlite</p>
 		<p>3.Select stylish.sqlite below</p>
 		<p>4.Wait a moment, the browser will pop up the download window, save it as</p>
-		<p>5.Open the xStyle management interface, select "Retrieve Backup", select the file just downloaded</p>
+		<p>5.Open the <a href="https://github.com/FirefoxBar/xStyle">xStyle</a> management interface, select "Retrieve Backup", select the file just downloaded</p>
 		<p>Note: This will overwrite the existing style in xStyle<p>
 		<p>在这里选择文件(Select the file here): <input type="file" id="dbfile"></p>
 		<p id="download-label"><a href="#" id="download">Download</a></p>
