--- a/index.html
+++ b/index.html
@@ -51,9 +51,30 @@
 		<p>4.Wait a moment, the browser will pop up the download window, save it as</p>
 		<p>5.Open the <a href="https://github.com/FirefoxBar/xStyle">xStyle</a> management interface, select "Retrieve Backup", select the file just downloaded</p>
 		<p>Note: This will overwrite the existing style in xStyle<p>
-		<p>在这里选择文件(Select the file here): <input type="file" id="dbfile"></p>
+	</div>
+</div>
+<div class="mdl-card mdl-shadow--2dp">
+	<div class="mdl-card__title">
+		<h2 class="mdl-card__title-text">选择文件(Select file)</h2>
+	</div>
+	<div class="mdl-card__supporting-text">
+		<p><input type="file" id="dbfile"></p>
 		<p id="download-label"><a href="#" id="download">Download</a></p>
 	</div>
+</div>
+<div class="mdl-card mdl-shadow--2dp">
+	<div class="mdl-card__title">
+		<h2 class="mdl-card__title-text">关于(About)</h2>
+	</div>
+	<div class="mdl-card__supporting-text">
+		<p>此网页由<a href="http://team.firefoxcn.net">Firefox吧项目组</a>开发，源代码：<a href="https://github.com/FirefoxBar/stylish-export">GitHub</a></p>
+		<p>第三方组件：<a href="https://getmdl.io/">Material Design Lite</a>、<a href="https://github.com/kripken/sql.js">SQL.js</a></p>
+		<p>此项目不允许任何未授权的分发、修改行为</p>
+		<p>This page is developed by <a href="http://team.firefoxcn.net">Firefox Bar Team</a>, Source code:<a href="https://github.com/FirefoxBar/stylish-export">GitHub</a></p>
+		<p>Third-party components:<a href="https://getmdl.io/">Material Design Lite</a>、<a href="https://github.com/kripken/sql.js">SQL.js</a></p>
+		<p>This project does not allow any unauthorized distribution or modification</p>
+	</div>
+</div>
 </div>
 <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/material-design-lite/1.3.0/material.min.js"></script>
