set default language to chinese for zh-TW browsers

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<script>
-	if (navigator.language !== 'zh-CN' && !window.location.search.includes('focus-language')) {
+	if (navigator.language !== 'zh-CN' && navigator.language !== 'zh-TW' && !window.location.search.includes('focus-language')) {
 		window.location.href = 'index_en.html';
 	}
 	</script>
