--- a/index_en.html
+++ b/index_en.html
@@ -4,11 +4,8 @@
 	<title>Stylish for Firefox Converter</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<script>
-	if (navigator.language === 'zh-CN' && navigator.language === 'zh-TW' && !window.location.search.includes('focus-language')) {
-		window.location.href = 'index.html';
-	}
-	</script>
+	<script>var current_language = 'en';</script>
+	<script src="index.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/material-design-lite/1.3.0/material.teal-red.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -50,10 +47,14 @@
 		<p>This project does not allow any unauthorized distribution or modification</p>
 	</div>
 </div>
-<div class="copyright">Copyright © 2017 <a href="http://team.firefoxcn.net">FirefoxBar Team</a>. <a href="index.html?focus-language=1">中文</a></div>
+<div class="copyright">
+	<p id="languages">
+		<a href="index.html?focus-language=1">中文</a>
+	</p>
+	<p>Copyright © 2017 <a href="http://team.firefoxcn.net">FirefoxBar Team</a></p>
+</div>
 </div>
 <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/material-design-lite/1.3.0/material.min.js"></script>
-<script src="index.js"></script>
 </body>
 </html>
