--- a/index_zh_tw.html
+++ b/index_zh_tw.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Stylish for Firefox Converter</title>
+	<title>Stylish for Firefox 转换器</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<script>var current_language = 'en';</script>
+	<script>var current_language = 'zh-TW';</script>
 	<script src="index.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/material-design-lite/1.3.0/material.teal-red.min.css">
@@ -17,40 +17,40 @@
 <div class="main">
 <div class="mdl-card mdl-shadow--2dp">
 	<div class="mdl-card__title">
-		<h2 class="mdl-card__title-text">Usage</h2>
+		<h2 class="mdl-card__title-text">使用说明</h2>
 	</div>
 	<div class="mdl-card__supporting-text">
-		<p>1.Find the Firefox profiles folder (if you do not know where it is, you can open about: support, click the "open folder" on right of "configuration folder")</p>
-		<p>2.Copy out stylish.sqlite</p>
-		<p>3.Select stylish.sqlite below</p>
-		<p>4.Wait a moment, the browser will pop up the download window, save it as</p>
-		<p>5.Open the <a href="https://github.com/FirefoxBar/xStyle">xStyle</a> management interface, select "Retrieve Backup", select the file just downloaded</p>
-		<p>Note: This will overwrite the existing style in xStyle<p>
+		<p>1.找到火狐个人文件夹（如果你不知道在哪，可以打开about:support，点击“配置文件夹”右边的“打开文件夹”）</p>
+		<p>2.复制出stylish.sqlite</p>
+		<p>3.在下面选择文件的地方，选择stylish.sqlite</p>
+		<p>4.稍等片刻，浏览器会弹出下载窗口，将其另存为</p>
+		<p>5.打开<a href="https://github.com/FirefoxBar/xStyle">xStyle</a>管理界面，选择“从备份文件导入”，选择刚才下载到的文件</p>
+		<p>注意：此操作将会覆盖xStyle中已有的样式<p>
 	</div>
 </div>
 <div class="mdl-card mdl-shadow--2dp">
 	<div class="mdl-card__title">
-		<h2 class="mdl-card__title-text">Select file</h2>
+		<h2 class="mdl-card__title-text">选择文件</h2>
 	</div>
 	<div class="mdl-card__supporting-text">
 		<p><input type="file" id="dbfile"></p>
-		<p id="download-label"><a href="#" id="download">Download</a></p>
+		<p id="download-label"><a href="#" id="download">下载</a></p>
 	</div>
 </div>
 <div class="mdl-card mdl-shadow--2dp">
 	<div class="mdl-card__title">
-		<h2 class="mdl-card__title-text">About</h2>
+		<h2 class="mdl-card__title-text">关于</h2>
 	</div>
 	<div class="mdl-card__supporting-text">
-		<p>This page is developed by <a href="http://team.firefoxcn.net">Firefox Bar Team</a>, Source code:<a href="https://github.com/FirefoxBar/stylish-export">GitHub</a></p>
-		<p>Third-party components:<a href="https://getmdl.io/">Material Design Lite</a>、<a href="https://github.com/kripken/sql.js">SQL.js</a></p>
-		<p>This project does not allow any unauthorized distribution or modification</p>
+		<p>此网页由<a href="http://team.firefoxcn.net">Firefox吧项目组</a>开发，源代码：<a href="https://github.com/FirefoxBar/stylish-export">GitHub</a></p>
+		<p>第三方组件：<a href="https://getmdl.io/">Material Design Lite</a>、<a href="https://github.com/kripken/sql.js">SQL.js</a></p>
+		<p>此项目不允许任何未授权的分发、修改行为</p>
 	</div>
 </div>
 <div class="copyright">
 	<p id="languages">
 		<a href="index.html?focus-language=1">简体中文</a>
-		<a href="index_zh_tw.html?focus-language=1">繁體中文</a>
+		<a href="index_en.html?focus-language=1">English</a>
 	</p>
 	<p>Copyright © 2017 <a href="http://team.firefoxcn.net">FirefoxBar Team</a></p>
 </div>
