--- a/index_zh_tw.html
+++ b/index_zh_tw.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Stylish for Firefox 转换器</title>
+	<title>Stylish for Firefox 轉換工具</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<script>var current_language = 'zh-TW';</script>
@@ -17,24 +17,24 @@
 <div class="main">
 <div class="mdl-card mdl-shadow--2dp">
 	<div class="mdl-card__title">
-		<h2 class="mdl-card__title-text">使用说明</h2>
+		<h2 class="mdl-card__title-text">使用說明</h2>
 	</div>
 	<div class="mdl-card__supporting-text">
-		<p>1.找到火狐个人文件夹（如果你不知道在哪，可以打开about:support，点击“配置文件夹”右边的“打开文件夹”）</p>
-		<p>2.复制出stylish.sqlite</p>
-		<p>3.在下面选择文件的地方，选择stylish.sqlite</p>
-		<p>4.稍等片刻，浏览器会弹出下载窗口，将其另存为</p>
-		<p>5.打开<a href="https://github.com/FirefoxBar/xStyle">xStyle</a>管理界面，选择“从备份文件导入”，选择刚才下载到的文件</p>
-		<p>注意：此操作将会覆盖xStyle中已有的样式<p>
+		<p>1.找到火狐個人資料夾（如果你不知道在哪，可以開啟about:support，點選“設定資料夾”右邊的“開啟資料夾”）</p>
+		<p>2.複製出stylish.sqlite</p>
+		<p>3.在下面選擇檔案的地方，選擇stylish.sqlite</p>
+		<p>4.稍等片刻，瀏覽器會彈出下載視窗，將其另存為</p>
+		<p>5.開啟<a href="https://github.com/FirefoxBar/xStyle">xStyle</a>管理介面，選擇“從備份檔案匯入”，選擇剛才下載到的檔案</p>
+		<p>注意：此動作將會覆寫xStyle中已有的樣式<p>
 	</div>
 </div>
 <div class="mdl-card mdl-shadow--2dp">
 	<div class="mdl-card__title">
-		<h2 class="mdl-card__title-text">选择文件</h2>
+		<h2 class="mdl-card__title-text">選擇檔案</h2>
 	</div>
 	<div class="mdl-card__supporting-text">
 		<p><input type="file" id="dbfile"></p>
-		<p id="download-label"><a href="#" id="download">下载</a></p>
+		<p id="download-label"><a href="#" id="download">下載</a></p>
 	</div>
 </div>
 <div class="mdl-card mdl-shadow--2dp">
@@ -42,9 +42,9 @@
 		<h2 class="mdl-card__title-text">关于</h2>
 	</div>
 	<div class="mdl-card__supporting-text">
-		<p>此网页由<a href="http://team.firefoxcn.net">Firefox吧项目组</a>开发，源代码：<a href="https://github.com/FirefoxBar/stylish-export">GitHub</a></p>
-		<p>第三方组件：<a href="https://getmdl.io/">Material Design Lite</a>、<a href="https://github.com/kripken/sql.js">SQL.js</a></p>
-		<p>此项目不允许任何未授权的分发、修改行为</p>
+		<p>此網頁由<a href="http://team.firefoxcn.net">Firefox吧項目組</a>開發，原始程式碼：<a href="https://github.com/FirefoxBar/stylish-export">GitHub</a></p>
+		<p>第三方元件：<a href="https://getmdl.io/">Material Design Lite</a>、<a href="https://github.com/kripken/sql.js">SQL.js</a></p>
+		<p>此項目不允許任何未授權的分發、變更動作</p>
 	</div>
 </div>
 <div class="copyright">
