--- a/index_zh_tw.html
+++ b/index_zh_tw.html
@@ -39,7 +39,7 @@
 </div>
 <div class="mdl-card mdl-shadow--2dp">
 	<div class="mdl-card__title">
-		<h2 class="mdl-card__title-text">关于</h2>
+		<h2 class="mdl-card__title-text">關於</h2>
 	</div>
 	<div class="mdl-card__supporting-text">
 		<p>此網頁由<a href="http://team.firefoxcn.net">Firefox吧項目組</a>開發，原始程式碼：<a href="https://github.com/FirefoxBar/stylish-export">GitHub</a></p>
