--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 </div>
 <div class="copyright">
 	<p id="languages">
-		<a href="index_en.html?focus-language=1">English</a>
-		<a href="index_zh_tw.html?focus-language=1">繁體中文</a>
+		<a href="index_en.html?force-language=1">English</a>
+		<a href="index_zh_tw.html?force-language=1">繁體中文</a>
 	</p>
 	<p>Copyright © 2017 <a href="http://team.firefoxcn.net">FirefoxBar Team</a></p>
 </div>
