--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta charset="utf-8">
 	<script>var current_language = 'zh-CN';</script>
 	<script src="index.js"></script>
-	<link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css">
-	<link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/material-design-lite/1.3.0/material.teal-red.min.css">
+	<link rel="stylesheet" type="text/css" href="https://lib.baomitu.com/material-design-icons/3.0.1/iconfont/material-icons.min.css">
+	<link rel="stylesheet" type="text/css" href="https://lib.baomitu.com/material-design-lite/1.3.0/material.teal-red.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!--[if lt IE 9]>
-	<script src="//cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+	<script src="https://lib.baomitu.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 	<![endif]-->
 </head>
 <body>
@@ -43,7 +43,6 @@
 	</div>
 	<div class="mdl-card__supporting-text">
 		<p>此网页由<a href="http://team.firefoxcn.net">Firefox吧项目组</a>开发，源代码：<a href="https://github.com/FirefoxBar/stylish-export">GitHub</a></p>
-		<p>第三方组件：<a href="https://getmdl.io/">Material Design Lite</a>、<a href="https://github.com/kripken/sql.js">SQL.js</a></p>
 		<p>此项目不允许任何未授权的分发、修改行为</p>
 	</div>
 </div>
@@ -55,7 +54,9 @@
 	<p>Copyright © 2017 <a href="http://team.firefoxcn.net">FirefoxBar Team</a></p>
 </div>
 </div>
-<script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/material-design-lite/1.3.0/material.min.js"></script>
+<script src="https://lib.baomitu.com/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://lib.baomitu.com/less.js/2.7.3/less.min.js"></script>
+<script src="/clean-css.min.js"></script>
+<script src="https://lib.baomitu.com/material-design-lite/1.3.0/material.min.js"></script>
 </body>
 </html>
